<resources>
    <string name="app_name">Wandrr</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Map</string>
    <string name="title_notifications">Trail Details</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="location">Nearby Outdoor Recreational Spaces</string>
    <string name="italicsub">Syracuse,NY</string>
    <string name="btnone">West Shore Trail</string>
    <string name="btntwo">Onondaga Creekwalk to Onondaga Lake</string>
    <string name="btnthree">Cliff Trail to Pulpit Rock Trail Loop</string>
    <string name="btnfour">Mildred Faust Trail</string>
    <string name="btnfive">Rand Tract Loop</string>
    <string name="btnsix">Upper Tree Trail</string>
    <string name="nameoftrail">West Shore Trail</string>
    <string name="locationoftrail">Onondaga Lake Park</string>
    <string name="description">Explore this 9.0-mile out-and-back trail near Syracuse, New York. Generally considered an easy route, it takes an average of 2 h 41 min to complete. This is a popular trail for hiking, road biking, and running, but you can still enjoy some solitude during quieter times of day. The best times to visit this trail are March through November.</string>
    <string name="elevation">Elevation: 127 ft</string>
    <string name="elevation2">Length: 9.0 Mi</string>
    <string name="title_start">start</string>

</resources>