<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_start">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.android.wandrr.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.android.wandrr.ui.maps.MapsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.android.wandrr.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_start"
        android:name="com.example.android.wandrr.ui.start.start.Fragjava"
        android:label="@string/title_notifications"
        tools:layout="@layout/start" >
        <action
            android:id="@+id/action_navigation_start_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>